2020-07-02  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* etc/pk-mi-json-schema.json : JSON Schema

2020-06-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (expression): Finish break statements in the
	try-until body.
	* libpoke/pkl-gen.c (pkl_gen_pr_try_until_stmt): Use
	pkl_asm_loop/pkl_asm_endloop to support `break' statements in the
	body.
	* doc/poke.texi (try-until): Mention that `break' is allowed in
	try-until loops.
	* testsuite/poke.pkl/try-until-4.pk: New test.
	* testsuite/poke.pkl/try-until-6.pk: Likewise.
	* testsuite/poke.pkl/try-until-5.pk: Likewise.

2020-06-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_loop_stmt): Use pkl_asm_while_loop
	and pkl_asm_while_endloop.
	* libpoke/ras: Likewise.
	* libpoke/pkl-asm.h (pkl_asm_while_loop): Renamed from
	pkl_asm_loop.
	(pkl_asm_while_endloop): Renamed from pkl_asm_endloop.
	(pkl_asm_loop): New prototype.
	(pkl_asm_endloop): Likewise.
	* libpoke/pkl-asm.c (pkl_asm_while_loop): Likewise.
	(pkl_asm_while_endloop): Likewise.
	(pkl_asm_loop): New function.
	(pkl_asm_endloop): Likewise.

	* testsuite/poke.pkl/while-2.pk: New test.

2020-06-28  Luca Saiu  <positron@gnu.org>

	do not rely on the unreliable "optimize" GCC function attribute
	* libpoke/pvm-env.c (pvm_env_back): New static function.
	(pvm_env_lookup, pvm_env_set_var): Rewrite avoiding recursion,
	and factor the common logic using the new static function.
	Remove __attribute__((optimize ("optimize-sibling-calls"))).
	Remove comment, now obsolete.

2020-06-24  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac (PACKAGE_BUGZILLA): ac_define.
	* poke/poke.c (print_help): Use PACKAGE_BUGZILLA.
	* HACKING (The Bugzilla): Add a note about the bugzilla URL being
	defined in configure.ac.

2020-06-19  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/Makefile.am: Pass SHELL as a variable to runtest.
	* testsuite/lib/poke-dg.exp (poke-dg-test): Use SHELL to build the
	shebang of the test program.
