@@ -269,23 +269,31 @@ pk_array_nelem (pk_val array)
 pk_val
 pk_array_elem_val (pk_val array, uint64_t idx)
 {
-  return PVM_VAL_ARR_ELEM_VALUE (array, idx);
+  if (idx < pk_uint_value (pk_array_nelem (array))) 
+    return PVM_VAL_ARR_ELEM_VALUE (array, idx);
+  else
+    return PK_NULL;
 }
 
 void
 pk_array_set_elem_val (pk_val array, uint64_t idx, pk_val val)
 {
-  PVM_VAL_ARR_ELEM_VALUE (array, idx) = val;
+  if (idx < pk_uint_value (pk_array_nelem (array))) 
+    PVM_VAL_ARR_ELEM_VALUE (array, idx) = val;
 }
 
 pk_val
 pk_array_elem_boffset (pk_val array, uint64_t idx)
 {
-  return PVM_VAL_ARR_ELEM_OFFSET (array, idx);
+  if (idx < pk_uint_value (pk_array_nelem (array))) 
+    return PVM_VAL_ARR_ELEM_OFFSET (array, idx);
+  else
+    return PK_NULL;
 }
 
 void
 pk_array_set_elem_boffset (pk_val array, uint64_t idx, pk_val boffset)
 {
-  PVM_VAL_ARR_ELEM_OFFSET (array, idx) = boffset;
+  if (idx < pk_uint_value (pk_array_nelem (array))) 
+    PVM_VAL_ARR_ELEM_OFFSET (array, idx) = boffset;
 }
